--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack watch --mode=development",
-    "build": "webpack --mode=development"
+    "build": "webpack --mode=development",
+    "serve": "webpack serve"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
     "css-loader": "^6.3.0",
     "style-loader": "^3.3.0",
     "webpack": "^5.53.0",
-    "webpack-cli": "^4.8.0"
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.3.1"
   }
 }
