--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.3.1"
+  },
+  "dependencies": {
+    "firebase": "^9.7.0"
   }
 }
