--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack watch --mode=development",
-    "build": "webpack --mode=development",
+    "build": "webpack --mode=production",
     "serve": "webpack serve"
   },
   "repository": {
@@ -28,6 +28,7 @@
     "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
-    "firebase": "^9.7.0"
+    "firebase": "^9.7.0",
+    "firebaseui": "^6.0.1"
   }
 }
