--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dumb-programmer/TODO-list.git"
+    "url": "https://github.com/dumb-programmer/TODO-list.git"
   },
   "keywords": [],
   "author": "",
